Fix calendar logos and alignment

--- a/src/components/events/CalendarButtons/style.module.scss
+++ b/src/components/events/CalendarButtons/style.module.scss
@@ -7,14 +7,19 @@
 
 .calendarLink {
   align-items: center;
-  background: transparent;
   border: 1px solid var(--theme-primary-2);
   border-radius: 10px;
   display: flex;
-  gap: 10px;
-  justify-content: center;
+  gap: 12px;
+  justify-content: flex-start;
   padding: 0.75rem;
-  width: 15rem;
+  width: 14.5rem;
+}
+
+[data-theme='light'] {
+  .appleCalLogo {
+    filter: drop-shadow(0 0 2px rgb(0 0 0 / 0.25));
+  }
 }
 
 .calendarButton:hover {
